# cognizantaimlhealthcareapr2026

./: README.md
healthcare/: pyproject.toml
healthcare/docs/source/: conf.py  index.rst
healthcare/health_env/: pyvenv.cfg
healthcare/src/: app.py  start.py
healthcare/src/healthcare.egg-info/: SOURCES.txt  requires.txt
healthcare/src/models/: doctor.py  patient.py
healthcare/src/store/: healthcarestore.py
healthcare/src/view/: healthcareview.py
